# squadbox

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  glfw_raii.cpp  glfw_raii.hpp  glfw_wrappers.cpp  imgui_glue.cpp  imgui_glue.hpp  main.cpp  vk_layer_settings.txt  vulkan_manager.cpp  vulkan_manager.hpp  vulkan_utils.cpp
cmake/: compile_glsl.cmake
code/: CMakeLists.txt  console_ui.cpp  console_ui.hpp  main.cpp
code/gfx/: camera.cpp  camera.hpp  glfw_wrappers.cpp  glfw_wrappers.hpp  gpu_memory_pool.cpp  gpu_memory_pool.hpp  gpu_mesh.hpp  imgui_glue.cpp  imgui_glue.hpp  mesh.cpp  mesh.hpp  render_job.cpp  render_job.hpp  render_manager.cpp  render_manager.hpp  vulkan_manager.cpp  vulkan_manager.hpp  vulkan_utils.cpp  vulkan_utils.hpp
code/gfx/primitives/: box.cpp  box.hpp
code/gfx/render_techniques/: flat_shading.cpp  flat_shading.hpp
code/shaders/: flat.frag  flat.vert
code/test_scenes/: cube.cpp  cube.hpp
shaders/: imgui.frag  imgui.vert
